fix: overflow adjustment to project scss

--- a/apps/projex/src/app/components/projects/view/view.component.scss
+++ b/apps/projex/src/app/components/projects/view/view.component.scss
@@ -70,8 +70,7 @@ biosimulations-tab-page ::ng-deep .icon-list {
   display: block;
   background: white;
   border-radius: 4px;
-  overflow-y: hidden;
-  overflow-x: visible;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   padding-top: 1rem;
